# bit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEMO.md  README.md  TODO.md  bit.sh  bootstrap.sh  justfile  pre-commit.sh  run_bdd_tests.sh
.github/: copilot-instructions.md  git-commit-instructions.md
.github/agents/: architect.agent.md  implementer.agent.md  reviewer.agent.md  tests.agent.md
.github/instructions/: log-merge.instructions.md
docs/: IMPLEMENTER_QUICK_START.md  MERGE_LOG_TESTS_COMPLETE.md  log_merge_commit_traversal.md  log_merge_traversal_test_summary.md
src/: lib.rs  main.rs
src/areas/: database.rs  index.rs  mod.rs  refs.rs  repository.rs  workspace.rs
src/artifacts/: mod.rs
src/commands/: mod.rs
src/domain/: blob_object.rs  git_object.rs  git_repository.rs  mod.rs
tests/: bdd_tests.rs  blob_commands.rs  cli_tests.rs  commit_commands.rs  index_commands.rs  init.rs
tests/add/: add_files_from_nested_directories_to_index_successfully.rs  add_multiple_files_to_index_incrementally_successfully.rs  add_multiple_files_to_index_successfully.rs  add_single_file_to_index_successfully.rs  adding_a_non_existent_file_is_ignored.rs  adding_an_unreadable_file_is_ignored.rs  concurrent_add_operations_maintain_index_consistency.rs  mod.rs  removing_deleted_files_from_index_successfully.rs  replace_directory_having_nested_children_with_file_successfully.rs  replace_directory_having_only_direct_children_with_file_successfully.rs  replace_file_with_directory_successfully.rs  stress_test_concurrent_add_operations.rs
tests/branch/: create_branch_from_ancestor.rs  create_branch_from_non_commit_oid_fails.rs  create_branch_from_oid.rs  create_branch_from_oid_edge_cases.rs  create_branch_from_parent.rs  create_branch_from_ref.rs  create_branch_with_hierarchical_name.rs  create_branch_with_invalid_name.rs  create_branch_with_valid_name.rs  (+6 more)
(+249 files in other folders)
