[package]
name = "bit"
version = "0.1.0"
authors = ["Sami Barbut-Dica"]
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.68"                               
clap = { version = "4.5.26", features = ["derive"] }
flate2 = "1.0.34"                                
sha1 = "0.10.6"
tokio = { version = "1.43.0", features = ["full"] }
fake = "3.1.0"
chrono = { version = "0.4.39", features = ["serde", "now"] }
bytes = "1.10.0"
file-guard = "0.2.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
assert_fs = "1.1.2"
