[package]
name = "bit"
version = "0.1.0"
authors = ["Sami Barbut-Dica"]
edition = "2024"
rust-version = "1.89"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
flate2 = "1.1.2"
sha1 = "0.10.6"
tokio = { version = "1.43.0", features = ["full"] }
fake = "4.3.0"
chrono = { version = "0.4.41", features = ["serde", "now"] }
bytes = "1.10.1"
file-guard = "0.2.0"
is_executable = "1.0.4"
walkdir = "2.5.0"
derive-new = "0.7.0"
byteorder = "1.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
assert_fs = "1.1.3"
rstest = "0.26.1"
pretty_assertions = "1.4.1"
futures = "0.3.31"
filetime = "0.2.26"
